--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Technical test</string>
+
+
+    <string name="cache_post">Cache post</string>
+    <string name="view_comments">View comments</string>
+
 </resources>
